@@ -1140,8 +1140,8 @@ class FigureCanvasPS(FigureCanvasBase):
                 outfile += ext
         title = outfile
         
-        
-        tmpfile = md5.md5(outfile).hexdigest()
+        # write to a temp file, we'll move it to outfile when done
+        tmpfile = os.path.join(gettempdir(), md5.md5(outfile).hexdigest())
         fh = file(tmpfile, 'w')
         
         self.figure.dpi.set(72) # ignore the dpi kwarg
@@ -1266,10 +1266,10 @@ def convert_psfrags(tmpfile, psfrags, font_preamble, paperWidth, paperHeight,
 \end{figure}
 \end{document}
 """% (font_preamble, paperWidth, paperHeight, paperWidth, paperHeight,
-'\n'.join(psfrags), angle, epsfile)
+'\n'.join(psfrags), angle, os.path.split(epsfile)[-1])
     latexh.close()
     
-    command = 'latex -interaction=nonstopmode "%s"'%(latexfile)
+    command = 'cd %s; latex -interaction=nonstopmode "%s"'%(gettempdir(), latexfile)
     verbose.report(command, 'debug-annoying')
     process = Popen([command], shell=True, stdin=PIPE, stdout=PIPE,
                     stderr=STDOUT)
@@ -1282,7 +1282,7 @@ your image.\nHere is the full report generated by LaTeX: \
 ##    verbose.report(stdout.read(), 'debug-annoying')
 ##    verbose.report(stderr.read(), 'helpful')
 ##    shutil.move(tmpfile, os.path.split(tmpfile)[-1])
-    command = 'dvips -o "%s" "%s"' % (psfile, dvifile)
+    command = 'cd %s; dvips -o "%s" "%s"' % (gettempdir(), psfile, dvifile)
     verbose.report(command, 'debug-annoying')
     process = Popen([command], shell=True, stdin=PIPE, stdout=PIPE,
                     stderr=STDOUT)
