@@ -35,6 +35,7 @@ rc('text', usetex=True)
 
 import glob, md5, os, shutil, sys, warnings
 from subprocess import Popen, STDOUT, PIPE
+from tempfile import gettempdir
 from matplotlib import get_configdir, get_home, get_data_path, \
      rcParams, verbose
 from matplotlib._image import readpng
@@ -56,7 +57,7 @@ class TexManager:
     configdir = get_configdir()
     texcache = os.path.join(configdir, 'tex.cache')
 
-    os.environ['TEXMFOUTPUT'] = texcache
+##    os.environ['TEXMFOUTPUT'] = texcache
     if os.path.exists(oldcache):
         print >> sys.stderr, """\
 WARNING: found a TeX cache dir in the deprecated location "%s".
@@ -158,8 +159,9 @@ WARNING: found a TeX cache dir in the deprecated location "%s".
         return self._font_preamble
         
     def make_tex(self, tex, prefix, fontsize):
-        texfile = os.path.join(self.texcache,prefix+'.tex')
-        fh = file(texfile, 'w')
+        texfile = os.path.join(self.texcache, prefix + '.tex')
+        textemp = os.path.join(gettempdir(), prefix + '.tex')
+        fh = file(textemp, 'w')
         fontcmd = {'sans-serif' : r'{\sffamily %s}',
             'monospace'  : r'{\ttfamily %s}'}.get(self.font_family, 
                 r'{\rmfamily %s}')
@@ -181,34 +183,43 @@ WARNING: found a TeX cache dir in the deprecated location "%s".
         if debug: force = True
         
         prefix = self.get_prefix(tex, fontsize)
-        dvibase = prefix + '.dvi'
-        dvifile = os.path.join(self.texcache, dvibase)
+        dvifile = os.path.join(self.texcache, prefix + '.dvi')
 
         if force or not os.path.exists(dvifile):
-            texfile = self.make_tex(tex, prefix, fontsize)
-            command = 'latex -interaction=nonstopmode "%s"'%texfile
-            verbose.report(command, 'debug-annoying')
+            tempdir = gettempdir()
+            texbase = os.path.split(self.make_tex(tex, prefix, fontsize))[-1]
+            command = 'cd %s; latex -interaction=nonstopmode "%s"'\
+                        %(tempdir, texbase)
+            verbose.report(command, 'debug')
             process = Popen([command], shell=True, stdin=PIPE, stdout=PIPE,\
                             stderr=STDOUT)
             exit_status = process.wait()
             if exit_status: raise RuntimeError('LaTeX was not able to process \
 the flowing string:\n%s\nHere is the full report generated by LaTeX: \
 \n\n'% tex + process.stdout.read())
-            else: verbose.report(process.stdout.read(), 'debug-annoying')
+            else: verbose.report(process.stdout.read(), 'debug')
 ##            verbose.report(command, 'debug-annoying')
 ##            stdin, stdout, stderr = os.popen3(command)
 ##            verbose.report(stdout.read(), 'debug-annoying')
 ##            err = stderr.read()
 ##            if err: verbose.report(err, 'helpful')
-
-        # tex will put it's output in the current dir if possible, and
-        # if not in TEXMFOUTPUT.  So check for existence in current
-        # dir and move it if necessary and then cleanup
-        if os.path.exists(dvibase):
-            shutil.move(dvibase, dvifile)
-            for fname in glob.glob(prefix+'*'):
+            textemp = os.path.join(tempdir, texbase)
+            texfile = os.path.join(self.texcache, texbase)
+            shutil.move(textemp, texfile)
+            dvitemp = os.path.join(tempdir, prefix+'.dvi')
+            shutil.move(dvitemp, dvifile)
+            for fname in glob.glob(os.path.join(tempdir, prefix+'*')):
                 os.remove(fname)
         return dvifile
+
+##        # tex will put it's output in the current dir if possible, and
+##        # if not in TEXMFOUTPUT.  So check for existence in current
+##        # dir and move it if necessary and then cleanup
+##        if os.path.exists(dvibase):
+##            shutil.move(dvibase, dvifile)
+##            for fname in glob.glob(prefix+'*'):
+##                os.remove(fname)
+##        return dvifile
         
     def make_png(self, tex, fontsize, dpi, force=0):
         if debug: force = True
@@ -222,14 +233,14 @@ the flowing string:\n%s\nHere is the full report generated by LaTeX: \
 
         # see get_rgba for a discussion of the background
         if force or not os.path.exists(pngfile):
-            verbose.report(command, 'debug-annoying')
+            verbose.report(command, 'debug')
             process = Popen([command], shell=True, stdin=PIPE, stdout=PIPE, 
                             stderr=STDOUT)
             exit_status = process.wait()
             if exit_status: raise RuntimeError('dvipng was not able to \
 process the flowing file:\n%s\nHere is the full report generated by dvipng: \
 \n\n'% dvifile + process.stdout.read())
-            else: verbose.report(process.stdout.read(), 'debug-annoying')
+            else: verbose.report(process.stdout.read(), 'debug')
 ##            stdin, stdout, stderr = os.popen3(command)
 ##            verbose.report(stdout.read(), 'debug-annoying')
 ##            err = stderr.read()
@@ -244,14 +255,15 @@ process the flowing file:\n%s\nHere is the full report generated by dvipng: \
         psfile = os.path.join(self.texcache, '%s.epsf'% prefix)
 
         if not os.path.exists(psfile):
-            command = 'dvips -q -E -o "%s" "%s"'% (psfile, dvifile)
+            command = 'dvips -q -E -o "%s" "%s"'%(psfile, dvifile)
+            verbose.report(command, 'debug')
             process = Popen([command], shell=True, stdin=PIPE, stdout=PIPE,
                             stderr=STDOUT)
             exit_status = process.wait()
             if exit_status: raise RuntimeError('dvips was not able to process \
 the flowing file:\n%s\nHere is the full report generated by dvips: \
 \n\n'% dvifile + process.stdout.read())
-            else: verbose.report(process.stdout.read(), 'debug-annoying')
+            else: verbose.report(process.stdout.read(), 'debug')
 ##            verbose.report(command, 'debug-annoying')
 ##            stdin, stdout, stderr = os.popen3(command)
 ##            verbose.report(stdout.read(), 'debug-annoying')
@@ -318,7 +330,7 @@ the flowing file:\n%s\nHere is the full report generated by dvips: \
             if infont:
                 thisfont.append(line)
                 continue
-            if line.startswith('%%BeginProcSet:'):                
+            if line.startswith('%%BeginProcSet:'):
                 inheader = True
             if inheader:
                 header.append(line)
